# animal_package

./: README.md
hahearn73_animal_package/: README.md  animal.py  pyproject.toml
hahearn73_animal_package/hahearn73_animal_package.egg-info/: PKG-INFO  SOURCES.txt
hahearn73_animal_package/mammal/: human.py
hahearn73_animals/animal/: animal.py
hahearn73_animals/animal/mammal/: bear.py  human.py  mammal.py
hahearn73_animals/animal/reptile/: reptile.py  snake.py
