[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hahearn73_animal_package"
version = "0.0.1"
authors = [
  { name="Harry Ahearn", email="hahearn730@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hahearn73/animal_package"
"Bug Tracker" = "https://github.com/hahearn73/animal_package"
